[tool.isort]
profile = "black"

[tool.poetry]
name = "pycomfoair"
version = "0.1.0"
description = "Interface for Zehnder ComfoAir 350 ventilation units"
authors = ["Andreas Oberritter <obi@saftware.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mtdcr/pycomfoair"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
]
packages = [
    { include = "comfoair" },
]

[tool.poetry.dependencies]
python = "^3.7"
async-timeout = "^4.0.2"
bitstring = "^3.1.9"
pyserial-asyncio = "^0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
